--- a/alfa/resources/alfa/www/index.html
+++ b/alfa/resources/alfa/www/index.html
@@ -9,14 +9,19 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="font/icomatic.css"/>
     <script src="components/react.js"></script>
+    <script src="jsonp.js"></script>
+    <script>
+    </script>
     <title>Mobile app using reagent</title>
 </head>
 <body style>
 <div id="main">
 
 </div>
-<div id="main-navi">
-
+<div id="mainNavi">
+<h1>
+    Well jonma
+</h1>
 </div>
 <script src="app.js">
 </script>
