--- a/alfa/resources/beta/www/index.html
+++ b/alfa/resources/beta/www/index.html
@@ -3,13 +3,33 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <!--
     <script src="components/loader.js"></script>
     <link rel="stylesheet" href="components/loader.css">
+     -->
+    <link rel="stylesheet" href="css/topcoat.css"/>
     <link rel="stylesheet" href="css/style.css">
-    <script>
-    </script>
+    <link rel="stylesheet" href="font/icomatic.css"/>
+    <script src="node_modules/mori/mori.js"></script>
+    <script src="components/react.min.js"></script>
+    <script src="components/jquery.js"></script>
+    <title>Mobile app using react</title>
 </head>
-<body>
-    This is a template for Monaca app.
+<body style>
+<div id="main">
+    <div id="header">
+
+    </div>
+    <div id="menu-list">
+        <h2>
+            HOLHOLA
+        </h2>
+    </div>
+
+</div>
+<script src="components/JSXTransformer.js"></script>
+<script type="text/jsx" src="appwisp.js" >
+</script>
+
 </body>
 </html>
