Touch events now work using reagent

--- a/alfa/resources/beta/www/index.html
+++ b/alfa/resources/beta/www/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="css/topcoat.css"/>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="font/icomatic.css"/>
-    <script src="node_modules/mori/mori.js"></script>
     <script src="components/react.min.js"></script>
     <script src="components/jquery.js"></script>
     <title>Mobile app using react</title>
@@ -28,7 +27,7 @@
 
 </div>
 <script src="components/JSXTransformer.js"></script>
-<script type="text/jsx" src="appwisp.js" >
+<script type="text/jsx" src="app-bundle.js" >
 </script>
 
 </body>
